; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/storage/extr_sddr55.c_sddr55_bulk_transport.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/storage/extr_sddr55.c_sddr55_bulk_transport.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.us_data = type { i32, i32, i64 }
%struct.sddr55_card_info = type { i32 }

@DMA_FROM_DEVICE = common dso_local global i32 0, align 4
@USB_STOR_XFER_GOOD = common dso_local global i32 0, align 4
@jiffies = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.us_data*, i32, i8*, i32)* @sddr55_bulk_transport to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sddr55_bulk_transport(%struct.us_data* %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.us_data*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.sddr55_card_info*, align 8
  %11 = alloca i32, align 4
  store %struct.us_data* %0, %struct.us_data** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %12 = load %struct.us_data*, %struct.us_data** %6, align 8
  %13 = getelementptr inbounds %struct.us_data, %struct.us_data* %12, i32 0, i32 2
  %14 = load i64, i64* %13, align 8
  %15 = inttoptr i64 %14 to %struct.sddr55_card_info*
  store %struct.sddr55_card_info* %15, %struct.sddr55_card_info** %10, align 8
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* @DMA_FROM_DEVICE, align 4
  %18 = icmp eq i32 %16, %17
  br i1 %18, label %19, label %23

19:                                               ; preds = %4
  %20 = load %struct.us_data*, %struct.us_data** %6, align 8
  %21 = getelementptr inbounds %struct.us_data, %struct.us_data* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  br label %27

23:                                               ; preds = %4
  %24 = load %struct.us_data*, %struct.us_data** %6, align 8
  %25 = getelementptr inbounds %struct.us_data, %struct.us_data* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 4
  br label %27

27:                                               ; preds = %23, %19
  %28 = phi i32 [ %22, %19 ], [ %26, %23 ]
  store i32 %28, i32* %11, align 4
  %29 = load i32, i32* %9, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %33, label %31

31:                                               ; preds = %27
  %32 = load i32, i32* @USB_STOR_XFER_GOOD, align 4
  store i32 %32, i32* %5, align 4
  br label %42

33:                                               ; preds = %27
  %34 = load i32, i32* @jiffies, align 4
  %35 = load %struct.sddr55_card_info*, %struct.sddr55_card_info** %10, align 8
  %36 = getelementptr inbounds %struct.sddr55_card_info, %struct.sddr55_card_info* %35, i32 0, i32 0
  store i32 %34, i32* %36, align 4
  %37 = load %struct.us_data*, %struct.us_data** %6, align 8
  %38 = load i32, i32* %11, align 4
  %39 = load i8*, i8** %8, align 8
  %40 = load i32, i32* %9, align 4
  %41 = call i32 @usb_stor_bulk_transfer_buf(%struct.us_data* %37, i32 %38, i8* %39, i32 %40, i32* null)
  store i32 %41, i32* %5, align 4
  br label %42

42:                                               ; preds = %33, %31
  %43 = load i32, i32* %5, align 4
  ret i32 %43
}

declare dso_local i32 @usb_stor_bulk_transfer_buf(%struct.us_data*, i32, i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
